Fixed: Header overlap issue hiding the dropdown menu

--- a/src/less/kii.less
+++ b/src/less/kii.less
@@ -371,7 +371,7 @@ small *,
     }
   }
   &.small {
-    min-height: 20%;
+    min-height: 185px;
     .title {
       padding: 75px 0 10px;
       font-size: 2.8em;
